Feat: Scramjet + More features in settings (Set proxy, Set P2P URL)

--- a/apps-src/org.nebulaservices.settings/index.html
+++ b/apps-src/org.nebulaservices.settings/index.html
@@ -43,6 +43,19 @@
                     <input type="text" id="wisp-url" />
                     <button id="save-wisp-url">Save</button>
                 </div>
+                <div class="setting-item input-group">
+                    <label for="p2p-url">Set P2P URL:</label>
+                    <input type="text" id="p2p-url" />
+                    <button id="save-p2p-url">Save</button>
+                </div>
+                <div class="setting-item input-group">
+                    <label for="proxy-select">Proxy:</label>
+                    <select id="proxy-select">
+                        <option value="uv">Ultraviolet</option>
+                        <option value="sj">Scramjet</option>
+                    </select>
+                    <button id="save-proxy">Save</button>
+                </div>
             </div>
 
             <div id="ui-section" class="section">
