--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="shortcut icon" href="/assets/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./index.css" />
+    <script src="/libs/sj/scramjet.all.js"></script>
     <script src="/libs/bare-mux/index.js" defer></script>
     <script src="/libs/transport/index.js" defer></script>
     <script src="/libs/uv/uv.bundle.js" defer></script>
